<resources>
    <string name="app_name">ג\'סטה</string>
    <string name="app_package">com.example.jesta</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email">דוא"ל</string>
    <string name="password">סיסמה</string>
    <string name="delete_password">Jklo87op$%2</string>
    <string name="login">התחברות</string>
    <string name="you_don_t_have_an_account">אין לך חשבון?</string>
    <string name="sign_up">הרשמה</string>
    <string name="name">שם</string>
    <string name="full_name">שם מלא</string>
    <string name="already_has_an_account">יש לך כבר חשבון?</string>
    <string name="confirm_password">אשר סיסמה</string>
    <string name="user_profile_image">תמונת פרופיל</string>
    <string name="register">הירשם</string>
    <string name="password_error">סיסמה חייבת להכיל אותיות קטנות גדולות וספרות לפחות בארוך 8 תווים</string>
    <string name="password_not_the_same">סיסמאות לא זהות</string>
    <string name="email_validation_error">דוא"ל לא חוקי</string>
    <string name="phone_validation_error">הטלפון חייב להכיל עשרה מספרים</string>
    <string name="name_validation_error">אנה הכנס שם מלא</string>
    <string name="profile">פרופיל</string>
    <string name="notification">התראות</string>
    <string name="add_jesta">הוסף ג\'סטה</string>
    <string name="podium">פודיום</string>
    <string name="home">בית</string>
    <string name="requested_jestas">ג\'סטות שביקשתי</string>
    <string name="todo_jestas">ג\'סטות לביצוע</string>
    <string name="waiting_jestas">ג\'סטות ממתינות</string>
    <string name="done_jestas">ג\'סטות שביצעתי</string>
    <string name="jesta_settings">הגדרות ג\'סטיונר</string>
    <string name="help">עזרה</string>
    <string name="make_contact">צור קשר</string>
    <string name="term_of_use">תנאי שימוש</string>
    <string name="about">אודות</string>
    <string name="rights_reserve">כל הזכויות שמורות © 2022 ג\'סטה</string>
    <string name="privacy_policy">מדיניות פרטיות</string>
    <string name="today">היום</string>
    <string name="tab_what">1. מה</string>
    <string name="tab_when">2. מתי</string>
    <string name="tab_where">3. איפה</string>
    <string name="tab_payment">4. גמול</string>
    <string name="tab_summary">5. סיכום</string>
    <string name="ask_for_jesta">בקשה לג\'סטה</string>
    <string name="picture">תמונה</string>
    <string name="how_many_men">כמה אנשים צריך?</string>
    <string name="short_description">תיאור קצר…</string>
    <string name="require_jesta">מה הג\'סטה המבוקשת?</string>
    <string name="cont">המשך</string>
    <string name="image_upload">העלאת תמונה</string>
    <string name="image_change">שינוי תמונה</string>
    <string name="camera">מצלמה</string>
    <string name="gallery">גלריה</string>
    <string name="gallery_intent_not_found">לא נמצאה אפליקציית גלריה במכשיר</string>
    <string name="camera_intent_not_found">לא נמצאה אפליקציית מצלמה במכשיר</string>
    <string name="delete_image">מחיקת תמונה</string>
    <string name="when_need_to_be_done">מתי נדרש לבצע זאת?</string>
    <string name="starting_day">תאריך התחלה</string>
    <string name="end_date">תאריך סיום</string>
    <string name="start_time">שעת התחלה</string>
    <string name="end_time">שעת סיום</string>
    <string name="repeat_jesta">ג\'סטה מחזורית</string>
    <string name="back">חזור</string>
    <string name="where_need_to_be_done">איפה נדרש לבצע זאת?</string>
    <string name="src_address">כתובת מוצא</string>
    <string name="dst_address">כתובת יעד</string>
    <string name="how_to_pay">איך לגמול למי שיבצע זאת?</string>
    <string name="move_it_forward">אעביר את זה הלאה</string>
    <string name="pay_for_it">אשלם על זה</string>
    <string name="amount_ins">סכום בשקלים</string>
    <string name="summary_requested_jesta">לסיכום, הג\'סטה המבוקשת:</string>
    <string name="nis_sign">₪</string>
    <string name="finish">סיום</string>
    <string name="dest">יעד:</string>
    <string name="src">מוצא:</string>
    <string name="tommorow">מחר</string>
    <string name="yesterday">אתמול</string>
    <string name="settings">הגדרות</string>
    <string name="phone">טלפון</string>
    <string name="address">כתובת</string>
    <string name="change_password">שינוי סיסמה</string>
    <string name="delete_account">מחיקת חשבון</string>
    <string name="birthday">תאריך לידה</string>
    <string name="change_image">שינוי תמונה</string>
    <string name="enter_phone">הכנס מספר טלפון</string>
    <string name="enter_address">הכנס כתובת</string>
    <string name="cancel">ביטול</string>
    <string name="canceled">מבוטלת</string>
    <string name="waiting_for_more_approval">ממתינה לעוד ג\'סטיונרים</string>
    <string name="submit">אישור</string>
    <string name="are_u_sure_delete_user">האם אתה בתוך שברצונך למחוק את המשתמש?</string>
    <string name="are_u_sure_logout_user">האם אתה בתוך שברצונך להתנתק?</string>
    <string name="are_u_sure_cancel_jesta">האם אתה בתוך שברצונך לבטל את הג\'סטה?</string>
    <string name="old_password">סיסמה ישנה</string>
    <string name="new_password">סיסמה חדשה</string>
    <string name="meter">מ\'</string>
    <string name="km">קמ\'</string>
    <string name="about_description">פלטפורמה חברתית המקשרת בין אנשים המבקשים טובות (\"ג\'סטות\"), לבין אנשים המוכנים לבצע ג\'סטות עבור אנשים אחרים, בחינם או בתשלום, ועל בסיס מיקום גיאוגרפי.\n\nבג\'סטה אנחנו משתדלים לעודד עזרה לזולת ומתגמלים מבצעי ג\'סטות שפועלים בשיטת \"תעביר את זה הלאה\", מה שאומר שביצוע הג\'סטה הוא בחינם אך על מבקש הג\'סטה לגמול לזולת בביצוע של שתי ג\'סטות למשתמשים אחרים. לכל משתמש יהיה ניקוד המעיד על העזרה שלו לזולת, ניקוד זה יורכב מכמות הג\'סטות שביצע בשיטה זו, בנוסף על כך בכל חודש המשתמשים שביצעו הכי הרבה ג\'סטות (10%) יזכו לתגית חגיגית לפרופיל המשתמש. אנחנו תמיד שואפים להשתפר ולשפר ולכן בימים אלו המוחות היצירתיים שעומדים מאחורי הפרויקט עובדים על דרכים נוספות לתגמל מבצעי ג\'סטות. בהצלחה ג\'סטיונרים.</string>
    <string name="about_headline">מה זה בעצם ג\'סטה?</string>
    <string name="privacy_body">איכפת לנו מהפרטיות שלך ולכן כאן תוכל ללמוד על איזה מידע אנחנו אוספים, מה אנחנו עושים ואילו פעולות אתה יכול לעשות בנוגע למידע שלך.\n\n אזהרה: האפליקציה הזו פיקטיבית, למטרות אקדמיות בלבד. אל תכניס מידע רגיש לאפליקציה.\n\n 1.המידע שאנחנו אוספים\n אנחנו אוספים תוכן ומידע נוסף שאתה מספק בשימוש באפליקציה, ביצירת חשבון, או בביצוע או בקשה של ג\'סטות. זה יכול לכלול את כל המידע הקשור לתוכן שאתה מספק, למשל, התאריך והשעה שהמידע התקבל במערכת.\n\n 2.איך אנחנו משתמשים במידע\n אנחנו משתמשים במידע שסיפקת על מנת שנוכל להציג בצורה יעילה את פרויקט זה.\n\n 3.איך אתה יכול למחוק את המידע שסיפקת\n אנחנו נותנים לך את היכולת לגשת, לערוך ולמחוק את המידע שלך. אנחנו שומרים את המידע עד שהוא לא נחוץ יותר למען הצגת פרויקט זה, או עד שהחשבון שלך נמחק.</string>
    <string name="privacy_headline">מדיניות פרטיות</string>
    <string name="terms_body">שימוש באפליקציה מהווה הסכמה לתנאי השימוש הבאים.\n\n1.הגדרה\nג\'סטה היא אפליקציה שפותחה בתור פרויקט גמר במסלול האקדמי המכללה למנהל כחלק מתואר מדעי המחשב.\n\n2.המותג\nג\'סטה היא כרגע לא חברה / אפליקציה אמיתית. נוצרה למטרות אקדמיות בלבד.\n\n3.מי יכול להשתמש באפליקציה\nאתה יכול לבדוק את העבודה שלנו, לבחון ולעשות פעולות אך ללא מטרה חוץ מהבדיקה עצמה, כל התוכן באפליקציה פיקטיבי למטרות הפרויקט בלבד.\n\n4.הפרטיות שלך\nמכיוון שהאפליקציה פיקטיבית, אנחנו ממליצים לא להכניס שום מידע רגיש למערכת.\n\n5.שימוש בקוד המקור\nקוד המקור פתוח לצפייה ונגיש לכולם. ולמרות זאת, עבדנו רבות על הפרויקט בכדי להוסיף אותו לתיק העבודות שלנו, אנחנו לא מאשרים שימוש מסחרי בפרויקט זה.</string>
    <string name="terms_headline">תנאי שימוש</string>
    <string name="contact_message_error">ההודעה חייבת להיות מעל 8 תווים</string>
    <string name="contact_subject_error">נושא הוא שדה חובה</string>
    <string name="contact_last_name_error">שם משפחה הוא שדה חובה</string>
    <string name="contact_first_name_error">שם פרטי הוא שדה חובה</string>
    <string name="your_location">המיקום שלך</string>
    <string name="suggest_help">הצע עזרה</string>
    <string name="jesta_details">פרטי ג\'סטה</string>
    <string name="logout">התנתק</string>
    <string name="send_msg">שלח הודעה</string>
    <string name="sent">נשלח</string>
    <string name="full_details">פרטים מלאים</string>
    <string name="accepted_by_me">מקובל עליי</string>
    <string name="view_rating">צפה בדירוג</string>
    <string name="write_rating">דרג</string>
    <string name="navigate_now">נווט עכשיו</string>
    <string name="offer_favor">%1$s! רוצה לעשות לך ג\'סטה</string>
    <string name="favor_approved">הג\'סטה ל%1$s! מאושרת לביצוע</string>
    <string name="approve_for_doing">מאושרת לביצוע</string>
    <string name="favor_finish">הג\'סטה ל%1$s! הושלמה בהצלחה</string>
    <string name="executor_finish_favor">%1$s! ביצע את הג\'סטה </string>
    <string name="yes">כן</string>
    <string name="no">לא</string>
    <string name="disable_offer">האם אתה רוצה לבטל את הצעתך לעזרה?</string>
    <string name="status">סטטוס</string>
    <string name="done">סיימתי</string>
    <string name="arrived">הגעתי</string>
    <string name="on_my_way">בדרך</string>
    <string name="finished">הסתיימה</string>
    <string name="pending_for_owner">ממתינה לאישור</string>
    <string name="pendig_for_execution_time">ממתינה לביצוע</string>
    <string name="executor_finish_jesta">נעשתה</string>
    <string name="ready_to_execute">מוכן לבצע</string>
    <string name="the_top_jestioners">הג\'סטיונרים המובילים</string>
    <string name="for_competition_ending">לסיום התחרות החודשית</string>
    <string name="user_details">פרטי משתמש</string>
    <string name="top_jestioner">ג\'סטיונר מוביל</string>
    <string name="help_headline">עזרה</string>
    <string name="help_summary">כאן תוכלו למצוא את השאלות הנפוצות ביותר שנשאלנו לגביהן, במידה ולא תמצאו כאן תשובה, אתם תמיד מוזמנים ליצור איתנו קשר.</string>
    <string name="help_p1_title">מה זה בעצם ג\'סטה?</string>
    <string name="help_p1">פלטפורמה חברתית המקשרת בין אנשים המבקשים טובות (\"ג\'סטות\"), לבין אנשים המוכנים לבצע ג\'סטות עבור אנשים אחרים, בחינם או בתשלום, ועל בסיס מיקום גיאוגרפי.\n\nבג\'סטה אנחנו משתדלים לעודד עזרה לזולת ומתגמלים מבצעי ג\'סטות שפועלים בשיטת \"תעביר את זה הלאה\", מה שאומר שביצוע הג\'סטה הוא בחינם אך על מבקש הג\'סטה לגמול לזולת בביצוע של שתי ג\'סטות למשתמשים אחרים. לכל משתמש יהיה ניקוד המעיד על העזרה שלו לזולת, ניקוד זה יורכב מכמות הג\'סטות שביצע בשיטה זו, בנוסף על כך בכל חודש המשתמשים שביצעו הכי הרבה ג\'סטות (10%) יזכו לתגית חגיגית לפרופיל המשתמש. אנחנו תמיד שואפים להשתפר ולשפר ולכן בימים אלו המוחות היצירתיים שעומדים מאחורי הפרויקט עובדים על דרכים נוספות לתגמל מבצעי ג\'סטות. בהצלחה ג\'סטיונרים.</string>
    <string name="help_p2_title">מי פיתח את ג\'סטה?</string>
    <string name="help_p2">ג\'סטה פותחה על ידי 5 סטודנטים למדעי המחשב: נועם פלג, איתי פרישמן, אוהד שי, דניאל ברנס, ומיכאל גרבוזוב.</string>
    <string name="help_p3_title">מצאתי באג, איפה אני מדווח?</string>
    <string name="help_p3">ניסינו להימנע מבאגים ככל האפשר, אבל אף אפליקציה אינה מושלמת, אם במקרה נתקלת באחד כזה, אתה יכול ליצור קשר עם כל אחד מהצוות שלנו דרך GitHub או LinkedIn או הודעה ישירה למייל שלנו.</string>
    <string name="help_p4_title">האם אוכל להשתמש בפרויקט באופן מסחרי?</string>
    <string name="help_p4">קוד המקור פתוח לצפייה וגלוי לכולם. עם זאת, עבדנו הרבה על הפרויקט הזה, ולכן איננו מאפשרים שימוש מסחרי בפרויקט שלנו.</string>
    <string name="favors_not_found">לא נמצאו ג\'סטות</string>
    <string name="reject">דחה</string>
    <string name="approve">אשר</string>
    <string name="got_offer_from">התקבלה הצעה מ</string>
    <string name="user_menu">תפריט משתמש</string>
    <string name="account_settings">הגדרות</string>
    <string name="short_description_about_yourself">תיאור קצר על עצמך</string>
    <string name="jesta_mail">jesta.app.mail@gmail.com</string>
    <string name="are_you_sure_to_exist">האם בטוח לצאת?</string>
    <string name="through_sms">דרך SMS</string>
    <string name="through_whatsapp">דרך WhatsApp</string>
    <string name="medals">מדליות</string>
    <string name="comment">חוות דעת</string>
</resources>