<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/nav_notification"
        android:title="@string/notification"
        app:actionLayout="@layout/bell"
        app:showAsAction="always" />

    <item
        android:id="@+id/nav_user_menu"
        android:icon="@drawable/ic_baseline_account_circle_24"
        android:title="@string/user_menu"
        app:showAsAction="ifRoom">

        <!-- User Menu Submenu: -->
        <menu>
            <item
                android:id="@+id/nav_user_profile"
                android:title="@string/profile" />

            <item
                android:id="@+id/nav_user_settings"
                android:title="@string/account_settings" />
        </menu>
    </item>

</menu>