<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layoutDirection="rtl"
    android:textDirection="rtl"
    tools:context=".view.fragments.utilities.HelpFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-black"
                android:padding="24dp"
                android:text="@string/help_headline"
                android:textAlignment="center"
                android:textSize="25sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="24dp"
                android:fontFamily="sans-serif-black"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:text="@string/help_summary"
                android:textSize="15sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:text="@string/help_p1_title"
                android:textSize="15sp"
                android:textColor="@color/black"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:text="@string/help_p1"
                android:textSize="15sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:text="@string/help_p2_title"
                android:textSize="15sp"
                android:textColor="@color/black"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:text="@string/help_p2"
                android:textSize="15sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:text="@string/help_p3_title"
                android:textSize="15sp"
                android:textColor="@color/black"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:text="@string/help_p3"
                android:textSize="15sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:text="@string/help_p4_title"
                android:textSize="15sp"
                android:textColor="@color/black"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:text="@string/help_p4"
                android:textSize="15sp" />

        </LinearLayout>
    </ScrollView>
</FrameLayout>